增加泰语越南语

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         $(function(){
             $('#button').hide()
             const editor = new JSONEditor(document.getElementById("jsoneditor"), {})
-            const headers =  ['key','英语','阿语','印尼语']
+            const headers =  ['key','英语','阿语','印尼语',"泰语","越南语"]
             function getAoA(json,str=''){
                     let ret = []
                     Object.keys(json).forEach(v=>{
