--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     const [key,...language] = headers
                     XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]).forEach(v=>{
                         _.setWith(data, v[key],language.map(ikey=>{
+                            if(!v[ikey]){
+                                console.log(key,ikey,'缺失');
+                            }
                             return v[ikey]||''
                         }),Object);
                     })
