--- a/index3.html
+++ b/index3.html
@@ -27,7 +27,7 @@
     </div>
     <div class="flex">
         <input type="file" id="file"  accept=".csv, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
-        <input type="text" id="SheetNames" placeholder="" value="家族">
+        <!-- <input type="text" id="SheetNames" placeholder="" value="家族"> -->
         <input type="text" id="fileName" placeholder="请输入excel名称">
         <button id="button" >下载</button>
     </div>
@@ -38,13 +38,13 @@
         $(function(){
             $('#button').hide()
             const editor = new JSONEditor(document.getElementById("jsoneditor"), {})
-            const headers =  ['不要修改第一行的名字！！！','中文','英语','阿拉伯语','印尼语',"泰语","越南语","土耳其语","马来语_1","繁体中文"]
+            const headers =  ['不要修改第一行的名字！！！','英语','阿拉伯语','印尼语',"泰语","越南语","土耳其语","马来语","繁体中文","印地语"]
             function getAoA(json,str=''){
                     let ret = []
                     Object.keys(json).forEach(v=>{
                         const item =json[v];
                         if(Array.isArray(item)){
-                            ret.push([str+v,item[0],item[1]])
+                            ret.push([str+v,...item])
                         }else{
                             ret.push(...getAoA(item,str+v+'.'))
                         }
@@ -58,13 +58,13 @@
                         type: 'binary',
                     })
                     let data = {}
-                    const [key,key1,...language] = headers
-                    const arrr = XLSX.utils.sheet_to_json(wb.Sheets[$('#SheetNames').val()])
+                    const [key,...language] = headers
+                    const arrr = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]])
                     arrr.forEach(v=>{
                         console.log('v: ', v);
-                        _.setWith(data, [v[key],v[key1]],language.map(ikey=>{
+                        _.setWith(data, v[key],language.map(ikey=>{
                             if(!v[ikey]){
-                                console.log(v[key],v[key1],ikey,'缺失');
+                                console.log(v[key],ikey,'缺失');
                             }
                             return v[ikey]||''
                         }),Object);
